https://invent.kde.org/sdk/umbrello/-/merge_requests/22

Apply outstanding changes from fix_argument_type_python3 branch of
                    https://invent.kde.org/patrickpereira/umbrello :

umbrello/codegenerators/python/pythonwriter.{h,cpp}
- Add functions fixTypeName, findIncludeFromType.

umbrello/codegenerators/python/pythonwriter.cpp
- In function writeClass,
  - in loop over includes use new function findIncludeFromType to avoid
    including Python predefined classes;
  - on printing superclasses omit inheritance from `object' (not needed
    in python3).
- In function writeOperations loop over opList nested loop over atl use
  new function fixTypeName on at->getTypeName() to make the types
  compatible with Python.

BUG: 432688